--- a/my-react/package.json
+++ b/my-react/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tederollz.github.io/Labb-2-Cv-my-react",
+  "homepage": "http://tederollz.github.io/",
   "name": "my-react",
   "version": "0.1.0",
   "private": true,
